<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/panelLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cars_logo"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/deleteCard"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="14dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/delete_icon" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/nothingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/addFBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panelLl" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carRw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_margin="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panelLl"
        tools:listitem="@layout/car_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/add_txt"
        android:elevation="50dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/blue" />

</androidx.constraintlayout.widget.ConstraintLayout>