<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:id="@+id/colorLinerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/carName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/car_name"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <ImageView
                android:id="@+id/ivCarURL"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/car" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/carDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/car_descr_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/deleteBtn"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/white"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/delete_btn"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>